<resources>
    <string name="app_name">칵테일이닭</string>
    <string name="main_coktailrecommand">님을 위한 칵테일</string>
    <string name="title_star_point">별점</string>
    <string name="title_alcohol_level">도수</string>
    <string name="title_keywords">키워드</string>
    <string name="title_cocktail_information">칵테일 설명</string>
    <string name="title_ingredients">필요한 재료</string>
    <string name="title_recipe">레시피</string>
    <string name="star_evaluate">평가하기</string>
    <string name="evaluate_ok">확인</string>
    <string name="title_review">리뷰</string>
    <string name="mypage_reset_nickname">닉네임 다시 설정하기</string>
    <string name="mypage_reset_level">선호 도수 변경하기</string>
    <string name="mypage_reset_base">선호 기주 설정하기</string>
    <string name="mypage_reset_keyword">키워드 다시 선택하기</string>
    <string name="mypage_title_main">마이페이지</string>
    <string name="mypage_title_information">나의 정보</string>
    <string name="mypage_title_level">선호하는 도수</string>
    <string name="mypage_title_base">선호하는 기주</string>
    <string name="mypage_title_keyword">내가 선택한 키워드</string>
    <string name="filter">필터</string>
    <string name="preferCocktail_text">어떤 칵테일을\n선호하나요?</string>
    <string name="server_client_id">1063572294782-1c5rlpj4cc0euk87cgorjg21snggm6ck.apps.googleusercontent.com</string>
    <string name="giju">기주</string>
    <string name="mixing">섞는법</string>
    <string name="shaking">쉐이킹</string>
    <string name="dosu_default">00 도</string>
    <string name="main_keyword">키워드</string>
    <string name="newest">최신순</string>
    <string name="starsoon">별점순</string>
    <string name="only_photo">사진리뷰만</string>
    <string name="write_review">작성하기</string>
    <string name="menu_detail_giju">기주</string>
    <string name="menu_detail_mixing">섞는법</string>
    <string name="menu_detail_shaking">쉐이킹</string>
    <string name="menu_detail_x_dosu">00 도</string>
    <string name="menu_detail_keywords">키워드</string>
    <string name="menu_detail_localname">로컬 이름</string>
    <string name="menu_detail_eng_name">영어 이름</string>
    <string name="menu_detail_local_eval_plz">로컬 이름에 대한 별점을 평가해 주세요.</string>
    <string name="search_tab_input_search_plz">검색어를 입력해 주세요</string>
    <string name="setting_personal_policy_title">개인정보 처리방침</string>
    <string name="setting_personal_policy_context">
        (Cocktaildakk)(\'https://www.cocktaildakk.shop/\'이하 \'Cocktaildakk\')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다. ○ 이 개인정보처리방침은 2022년 3월 2부터 적용됩니다. 제1조(개인정보의 처리 목적) Cocktaildakk (\'https://www.cocktaildakk.shop/\'이하 \'Cocktaildakk\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다. 1. 홈페이지 회원가입 및 관리 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리 목적으로 개인정보를 처리합니다. 제2조(개인정보의 처리 및 보유 기간) ① Cocktaildakk 은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다. ② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다. 1.홈페이지 회원가입 및 관리 홈페이지 회원가입 및 관리와 관련한 개인정보는 수집.이용에 관한 동의일로부터 3년까지 위 이용목적을 위하여 보유.이용됩니다. 보유근거 : 앱 서비스 사용을 위한 회원가입 및 관리 관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년 예외사유 : 제3조(정보주체와 법정대리인의 권리·의무 및 그 행사방법) ① 정보주체는 Cocktaildakk에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다. ② 제1항에 따른 권리 행사는Cocktaildakk에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 Cocktaildakk은(는) 이에 대해 지체 없이 조치하겠습니다. ③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다. ④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다. ⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다. ⑥ Cocktaildakk은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다. 제4조(처리하는 개인정보의 항목 작성) ① Cocktaildakk 은(는) 다음의 개인정보 항목을 처리하고 있습니다. 1 홈페이지 회원가입 및 관리 필수항목 : 이메일, 성별, 생년월일 선택항목 : 제5조(개인정보의 파기) ① Cocktaildakk 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다. ② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다. 1. 법령 근거 : 2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜 ③ 개인정보 파기의 절차 및 방법은 다음과 같습니다. 1. 파기절차 Cocktaildakk 은(는) 파기 사유가 발생한 개인정보를 선정하고, Cocktaildakk 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다. 2. 파기방법 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다 제6조(개인정보의 안전성 확보 조치) Cocktaildakk 은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다. 1. 내부관리계획의 수립 및 시행 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다. 2. 해킹 등에 대비한 기술적 대책 Cocktaildakk (\'Cocktaildakk\')은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다. 3. 개인정보에 대한 접근 제한 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다. 4. 비인가자에 대한 출입 통제 개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다. 제7조(개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항) Cocktaildakk 은(는) 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용하지 않습니다. 제8조 (개인정보 보호책임자) ① Cocktaildakk 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다. ▶ 개인정보 보호책임자 성명 :이해찬 직책 :팀장 직급 :프론트개발자 연락처 :01026972321, bun0373@gmail.com, ※ 개인정보 보호 담당부서로 연결됩니다. ▶ 개인정보 보호 담당부서 부서명 : 담당자 : 연락처 :, , ② 정보주체께서는 Cocktaildakk 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. Cocktaildakk 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다. 제9조(개인정보 열람청구) 정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. Cocktaildakk 은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다. ▶ 개인정보 열람청구 접수·처리 부서 부서명 : 담당자 : 연락처 : , , 제10조(권익침해 구제방법) 정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다. 1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr) 2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr) 3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr) 4. 경찰청 : (국번없이) 182 (ecrm.cyber.go.kr) 「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다. ※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다. 제11조(개인정보 처리방침 변경) ① 이 개인정보처리방침은 2022년 3월 2부터 적용됩니다.
    </string>
    <string name="settings_title">설정</string>
    <string name="settings_help">도움</string>
    <string name="settings_version_info">버전정보</string>
    <string name="settings_current_new">현재 1.5</string>
    <string name="settings_personal_policy">개인 정보 처리 방침</string>
    <string name="start_start_google_login_text">구글로 로그인하기</string>
    <string name="start_name_title">사용할\n닉네임을\n알려주세요</string>
    <string name="start_name_input">입력하기</string>
    <string name="start_name_warning_not_input">닉네임을 입력해주세요.</string>
    <string name="start_name_ok">완료</string>
    <string name="fragment_keywordrec_today_cocktail_name">칵테일 이름</string>
    <string name="_1">1</string>
    <string name="_slash">/</string>
    <string name="_5">5</string>
    <string name="fragment_keywordrecommand_today_title">오늘의 칵테일</string>
    <string name="fragment_keywordrecommand_today_ask">이런 칵테일 어때요?</string>
    <string name="fragment_keywordrecommand_hash_tag_01">#추운겨울에 마시기 좋은 따뜻한 칵테일</string>
    <string name="_more">더보기</string>
    <string name="fragment_keywordrecommand_hash_tag_02">#여름에 마시기 좋은 칵테일</string>
    <string name="fragment_locker_title">내 보관함</string>
    <string name="_space" />
    <string name="fragment_main_search_plz">검색어를 입력해주세요.</string>
    <string name="fragment_mainrec_subbanner_tag">밤에 어울리는 칵테일</string>
    <string name="fragment_mypage_nickname">닉네임</string>
    <string name="fragment_mypage_dosu_format">소주 oo잔</string>
    <string name="fragment_mypage_reset_nickname">닉네임 다시 설정하기</string>
    <string name="fragment_mypage_input">입력하기</string>
    <string name="fragment_mypage_nickname_warning">닉네임을 입력해주세요.</string>
    <string name="fragment_mypage_resetting_dosu_min_dosu">0도</string>
    <string name="fragment_mypage_resetting_dosu_max_dosu">40도</string>
    <string name="fragment_mypage_resetting_dosu_selected_dosu">00도</string>
    <string name="fragment_mypage_resetting_giju_rum">럼</string>
    <string name="fragment_mypage_resetting_giju_vodka">보드카</string>
    <string name="fragment_mypage_resetting_giju_tequila">데킬라</string>
    <string name="fragment_mypage_resetting_giju_whisky">위스키</string>
    <string name="fragment_mypage_resetting_giju_brandi">브랜디</string>
    <string name="fragment_mypage_resetting_giju_liqueur">리큐르</string>
    <string name="fragment_mypage_resetting_giju_gin">진</string>
    <string name="fragment_mypage_resetting_keyword_01">레이디킬러</string>
    <string name="fragment_mypage_resetting_keyword_02">슈터</string>
    <string name="fragment_mypage_resetting_keyword_03">깔끔한</string>
    <string name="fragment_mypage_resetting_keyword_04">탄산</string>
    <string name="fragment_mypage_resetting_keyword_05">레이어드</string>
    <string name="fragment_mypage_resetting_keyword_06">마티니</string>
    <string name="fragment_mypage_resetting_keyword_07">예쁜</string>
    <string name="fragment_mypage_resetting_keyword_08">하이볼</string>
    <string name="fragment_mypage_resetting_keyword_09">달달한</string>
    <string name="fragment_mypage_resetting_keyword_10">독한</string>
    <string name="fragment_mypage_resetting_keyword_11">상쾌한</string>
    <string name="fragment_mypage_resetting_keyword_12">과일향</string>
    <string name="fragment_mypage_resetting_keyword_13">씁쓸한</string>
    <string name="fragment_mypage_resetting_keyword_14">온더락</string>
    <string name="fragment_mypage_resetting_keyword_15">상큼한</string>
    <string name="fragment_mypage_resetting_keyword_16">단순한</string>
    <string name="fragment_mypage_resetting_keyword_17">우유</string>
    <string name="fragment_mypage_resetting_keyword_18">복잡한</string>
    <string name="fragment_search_search_plz">검색어를 입력해주세요.</string>
    <string name="fragment_search_search_ok">검색하기</string>
    <string name="fragment_search_giju">기주</string>
    <string name="fragment_search_dosu">도수</string>
    <string name="fragment_search_dosu_format">00도 ~ 00도</string>
    <string name="fragment_search_keyword">키워드</string>
    <string name="fragment_search_pic_background">픽터백그라운드</string>
    <string name="fragment_search_giju_title">기주</string>
    <string name="fragment_search_giju_01">보드카</string>
    <string name="fragment_search_giju_02">위스키</string>
    <string name="fragment_search_giju_03">럼</string>
    <string name="fragment_search_giju_04">진</string>
    <string name="fragment_search_giju_05">데킬라</string>
    <string name="fragment_search_giju_06">리큐르</string>
    <string name="fragment_search_giju_07">브랜디</string>
    <string name="fragment_search_dosu_format_2">10도 ~ 30도</string>
    <string name="fragment_search_taste_keyword_title">맛 키워드</string>
    <string name="fragment_start_f_title">취향 키워드를\n알려주세요</string>
    <string name="fragment_start_f_keyword_01">레이디킬러</string>
    <string name="fragment_start_f_keyword_02">슈터</string>
    <string name="fragment_start_f_keyword_03">깔끔한</string>
    <string name="fragment_start_f_keyword_04">탄산</string>
    <string name="fragment_start_f_keyword_05">레이어드</string>
    <string name="fragment_start_f_keyword_06">마티니</string>
    <string name="fragment_start_f_keyword_07">예쁜</string>
    <string name="fragment_start_f_keyword_08">하이볼</string>
    <string name="fragment_start_f_keyword_09">달달한</string>
    <string name="fragment_start_f_keyword_10">독한</string>
    <string name="fragment_start_f_keyword_11">상쾌한</string>
    <string name="fragment_start_f_keyword_12">과일향</string>
    <string name="fragment_start_f_keyword_13">씁쓸한</string>
    <string name="fragment_start_f_keyword_14">온더락</string>
    <string name="fragment_start_f_keyword_15">상큼한</string>
    <string name="fragment_start_f_keyword_16">단순한</string>
    <string name="fragment_start_f_keyword_17">우유</string>
    <string name="fragment_start_f_keyword_18">복잡한</string>
    <string name="fragment_start_f_start">시작하기</string>
</resources>