<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/setting_keyword_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/fragment_start_f_title"
        android:textColor="@color/white"

        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/setting_keyword_btn_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/white"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="4dp"
        android:layout_marginVertical="30dp"
        android:fadeScrollbars="false"
        app:layout_constraintTop_toBottomOf="@id/setting_keyword_title_tv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/start_filter_keyword_ladykiller_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_01"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/start_filter_keyword_shooter_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/start_filter_keyword_shooter_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_02"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_clean_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_ladykiller_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_ladykiller_bt"

                />

            <CheckBox
                android:id="@+id/start_filter_keyword_clean_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_03"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_tansan_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_shooter_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_ladykiller_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_tansan_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_04"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_clean_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_ladykiller_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_layered_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_05"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_martini_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_filter_keyword_ladykiller_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_martini_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_06"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_pretty_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_layered_bt"
                app:layout_constraintTop_toTopOf="@id/start_filter_keyword_layered_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_pretty_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_07"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_martini_bt"
                app:layout_constraintTop_toTopOf="@id/start_filter_keyword_layered_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_highball_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_08"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_sweet_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_filter_keyword_layered_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_sweet_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_09"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_dockhan_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_highball_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_highball_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_dockhan_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_10"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_sangque_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_sweet_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_highball_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_sangque_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_11"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_dockhan_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_highball_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_fluitfavor_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_12"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_ssupssup_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_filter_keyword_highball_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_ssupssup_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_13"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_ontherrock_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_fluitfavor_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_fluitfavor_bt"

                />

            <CheckBox
                android:id="@+id/start_filter_keyword_ontherrock_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_14"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_ssupssup_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_ssupssup_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_sangkum_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_15"
                android:textColor="@color/white"

                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_dansun_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_filter_keyword_fluitfavor_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_dansun_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_16"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_milk_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_sangkum_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_sangkum_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_milk_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_17"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/start_filter_keyword_bockjap_bt"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_dansun_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_sangkum_bt" />

            <CheckBox
                android:id="@+id/start_filter_keyword_bockjap_bt"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:background="@drawable/setting_bg_btn_radius_bl_on_off"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/fragment_start_f_keyword_18"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_filter_keyword_milk_bt"
                app:layout_constraintTop_toTopOf="@+id/start_filter_keyword_sangkum_bt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/setting_keyword_btn_tv"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/icon_setting_start2"
        android:gravity="center"
        android:text="@string/fragment_start_f_start"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_keyword_back_tv"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:background="@mipmap/icon_detail_backarrow"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>