<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <CheckBox
            android:id="@+id/mypage_resetting_giju_rum_cb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/mypage_resetting_giju_vodca_cb"


            android:text="@string/fragment_mypage_resetting_giju_rum"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_vodca_cb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/mypage_resetting_giju_rum_cb"
            app:layout_constraintStart_toEndOf="@id/mypage_resetting_giju_rum_cb"
            app:layout_constraintEnd_toStartOf="@id/mypage_resetting_giju_tequila_cb"
            android:gravity="center"
            android:text="@string/fragment_mypage_resetting_giju_vodka"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_tequila_cb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/mypage_resetting_giju_rum_cb"


            app:layout_constraintStart_toEndOf="@id/mypage_resetting_giju_vodca_cb"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="center"
            android:text="@string/fragment_mypage_resetting_giju_tequila"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_wiski_tv"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"        app:layout_constraintTop_toBottomOf="@+id/mypage_resetting_giju_rum_cb"
            app:layout_constraintStart_toStartOf="@id/mypage_resetting_giju_rum_cb"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/fragment_mypage_resetting_giju_whisky"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_brandy_cb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"        app:layout_constraintTop_toTopOf="@+id/mypage_resetting_giju_wiski_tv"
            app:layout_constraintStart_toEndOf="@id/mypage_resetting_giju_rum_cb"
            app:layout_constraintEnd_toStartOf="@id/mypage_resetting_giju_tequila_cb"
            android:gravity="center"
            android:text="@string/fragment_mypage_resetting_giju_brandi"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_liqueur_cb"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/mypage_resetting_giju_wiski_tv"
            app:layout_constraintStart_toEndOf="@id/mypage_resetting_giju_brandy_cb"
            app:layout_constraintEnd_toEndOf="parent"

            android:gravity="center"
            android:text="@string/fragment_mypage_resetting_giju_liqueur"
            />

        <CheckBox
            android:id="@+id/mypage_resetting_giju_jin_tv"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:button="@android:color/transparent"
            android:background="@drawable/mypage_resetting_on_off"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/mypage_resetting_giju_wiski_tv"
            app:layout_constraintStart_toStartOf="@id/mypage_resetting_giju_rum_cb"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/fragment_mypage_resetting_giju_gin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>